--- a/.github/workflows/create-tag-release.yaml
+++ b/.github/workflows/create-tag-release.yaml
@@ -30,6 +30,11 @@ jobs:
       version: ${{ inputs.version }}
     secrets: inherit
 
+  package-update:
+    name: Update Package Imports
+    uses: dell/common-github-actions/.github/workflows/update-libraries.yml@main
+    secrets: inherit
+
   build-and-scan:
     name: Build and Scan
     needs: [process-inputs]
