Update Trigger Jobs to Align with Dependency Requirements and Release Flow (#202)
* update triggers

* revert

* new line

* add dependencies

--- a/.github/workflows/create-tag-release.yaml
+++ b/.github/workflows/create-tag-release.yaml
@@ -30,9 +30,14 @@ jobs:
       version: ${{ inputs.version }}
     secrets: inherit
 
+  package-update:
+    name: Update Package Imports
+    uses: dell/common-github-actions/.github/workflows/update-libraries.yml@main
+    secrets: inherit
+
   build-and-scan:
     name: Build and Scan
-    needs: [process-inputs]
+    needs: [process-inputs, package-update]
     outputs:
       processedVersion: ${{ needs.process-inputs.outputs.processedVersion }}
     runs-on: ubuntu-latest
